UI updates, added title section to each page, fixed mobile alignments

--- a/about/style.css
+++ b/about/style.css
@@ -15,7 +15,7 @@ img{
 
 }
 
-h1{
+.about_headline>h1{
     font-size: 48px;
 }
 
@@ -31,7 +31,7 @@ h1{
 }
 #modal-container>img{
     border-radius: 0px;
-    width: 65vh;
+    width: 50vh;
 }
 #modal-container{
     display:flex;
@@ -46,4 +46,29 @@ h1{
     margin: 0 auto;
     font-size: 24px;
     padding: 24px 0px;
+}
+.headsection{
+    background-image: url("../images/homebg.png");
+    background-color: var(--green);
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.headsection>h1{
+    font-size: 64px;
+}
+
+@media (max-width: 500px) {
+    .head-section{
+        padding: 10px;
+        text-align: center;
+    }
 }
