--- a/projects/style.css
+++ b/projects/style.css
@@ -10,4 +10,57 @@ html{
 }
 li{
     text-align: left;
+    list-style-type: none
+}
+.left-block{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 48px;
+    padding: 24px;
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 25px;
+}
+.card-content{
+    text-align: left;
+    margin: 25px;
+}
+
+.headsection{
+    background-image: url("../images/homebg.png");
+    background-color: var(--green);
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.headsection>h1{
+    font-size: 64px;
+}
+
+@media (max-width: 500px) {
+    .left-block{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0px 16px;
+    }
+    .card-content{
+        margin: 10px 0px;
+    }
+    button{
+        width: 80vw;
+    }
+    .head-section{
+        padding: 10px;
+        text-align: center;
+    }
 }
