--- a/style.css
+++ b/style.css
@@ -22,10 +22,17 @@ html{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
 }
 
 .headsection>h1{
-    font-size: 42px;
+    font-size: 48px;
+    padding-bottom: 12px;
+}
+.headsection>h4{
+    font-size: 32px;
+    padding-bottom: 12px;
+    font-style: italic;
 }
 
 .headsection>a{
@@ -39,6 +46,9 @@ html{
     margin: 10px 0;
     font-family: 'Lexend', sans-serif;
     text-decoration: none;
+}
+.headsection>a:hover{
+    background-color: #c5a11f;
 }
 .project-left{
     display: flex;
